--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,71 @@
     android:orientation="horizontal"
     tools:context="com.example.sequenciador.MainActivity">
 
-    <Button
-        android:id="@+id/record"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Record"
-        android:textSize="20sp" />
+    <Spinner
+        android:id="@+id/spinner0"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:spinnerMode="dropdown"/>
+
+    <ImageButton
+        android:id="@+id/record_0"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/record_button"
+        android:backgroundTint="@color/white"/>
+
+    <SeekBar
+        android:id="@+id/seek_0"
+        android:layout_width="300dp"
+        android:layout_height="29dp"
+        android:layout_alignTop="@id/record_0"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="80dp"
+        android:max="50"
+        android:progress="0" />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <ImageButton
+        android:id="@+id/record_1"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginLeft="20dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/record_button"
+        android:backgroundTint="@color/white"/>
+
+    <SeekBar
+        android:id="@+id/seek_1"
+        android:layout_width="300dp"
+        android:layout_height="29dp"
+        android:layout_alignTop="@id/record_0"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="80dp"
+        android:max="50"
+        android:progress="0" />
 
     <Button
         android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/record"
-        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="600dp"
         android:text="Play"
         android:textSize="20sp" />
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="550dp"
-        android:layout_height="29dp"
-        android:layout_alignTop="@id/record"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="140dp"
-        android:max="50"
-        android:progress="0" />
 </RelativeLayout>
